--- a/first_lesson.html
+++ b/first_lesson.html
@@ -13,7 +13,7 @@
 <!-- Page Content -->
 <body>
     <!-- Recomended to have only one h1 tag on the page -->
-<h1>Heading title level 1</h1>
+<h1>Heading title level 1 Україна</h1>
 <h2>Heading title level 2</h2>
 <h3>Heading title level 3</h3>
 <h4>Heading title level 4</h4>
@@ -35,7 +35,7 @@
     modi, <mark>error ab debitis</mark>  vel tempora. Dignissimos, ducimus 
     ab?
 </p>
-<blockquote>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, libero. Amet aut aperiam eaque nulla tenetur, voluptatum omnis sit, esse, libero molestias ipsa asperiores repudiandae eos laboriosam similique ab fugiat!</blockquote>
+<blockquote>Україна ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, libero. Amet aut aperiam eaque nulla tenetur, voluptatum omnis sit, esse, libero molestias ipsa asperiores repudiandae eos laboriosam similique ab fugiat!</blockquote>
 <address>Soborna street, 16, Ukraine</address>
 
 <p> <kbd>Ctrl+/</kbd>  - comment/uncomment</p>
