--- a/lists.html
+++ b/lists.html
@@ -76,6 +76,12 @@
           .myli{
             list-style-type: lower-alpha;
           }
+          div>p>span{
+            color: red;
+          }
+          ol {color: red;}
+          ol ol {color: green;}
+          ol ol ol {color: yellow;}
     </style>
 </head>
 <body>
